# Launchpad

./: README.md  package.json  vite.config.ts
github-upload/: index.html
github-upload/src/: App.tsx  styles.css
github-upload/src-tauri/icons/: icon.icns
github-upload/src-tauri/src/: commands.rs  icon.rs  main.rs
github-upload/src/components/: SearchBar.tsx
github-upload/src/lib/: api.ts
github-upload/src/store/: useStore.ts
scripts/: gen-icon.mjs
src/: types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  launch.rs  lib.rs  lnk.rs  metadata.rs
src/components/: ContextMenu.tsx  EntryCard.tsx  FolderPopup.tsx  FolderPreview.tsx  LaunchpadView.tsx  SettingsPanel.tsx
