[package]
name = "launchpad"
version = "0.1.0"
description = "Mac 风格启动台 - 文件系统驱动"
authors = ["Ticea"]
edition = "2021"

[lib]
name = "launchpad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 图标提取
image = { version = "0.25", default-features = false, features = ["png"] }
blake3 = "1"
rust-ini = "0.21"
parking_lot = "0.12"
dunce = "1"

# 文件监听
notify = "8"

# 毛玻璃（运行时强制 Acrylic，比声明式 windowEffects 可靠）
window-vibrancy = "0.6"

# Win32 互操作
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_LibraryLoader",
    "Win32_Storage_FileSystem",
] }
